Add Exception handling to add command